--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,27 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
-    "react-scroll": "^1.9.0",
-    "react-typed": "^2.0.12"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "gh-pages": "^6.1.1",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
     "vite": "^5.3.4"
   }
 }
